@@ -57,11 +57,11 @@ qmidictlOptionsForm::qmidictlOptionsForm (
 	adjustSize();
 
 	// UI signal/slot connections...
-	QObject::connect(m_ui.AcceptButton,
-		SIGNAL(clicked()),
+	QObject::connect(m_ui.DialogButtonBox,
+		SIGNAL(accepted()),
 		SLOT(accept()));
-	QObject::connect(m_ui.RejectButton,
-		SIGNAL(clicked()),
+	QObject::connect(m_ui.DialogButtonBox,
+		SIGNAL(rejected()),
 		SLOT(reject()));
 }
 
